@@ -893,11 +893,11 @@ HTMLArea.Iframe = Ext.extend(Ext.BoxComponent, {
 			// All browsers
 		if (!iframe || (!iframe.contentWindow && !iframe.contentDocument)) {
 			this.initializeIframe.defer(50, this);
-			// All except Safari
+			// All except WebKit
 		} else if (iframe.contentWindow && !Ext.isWebKit && (!iframe.contentWindow.document || !iframe.contentWindow.document.documentElement)) {
 			this.initializeIframe.defer(50, this);
-			// Safari
-		} else if (!iframe.contentDocument.documentElement || !iframe.contentDocument.body) {
+			// WebKit
+		} else if (Ext.isWebKit && (!iframe.contentDocument.documentElement || !iframe.contentDocument.body)) {
 			this.initializeIframe.defer(50, this);
 		} else {
 			this.document = iframe.contentWindow ? iframe.contentWindow.document : iframe.contentDocument;
