@@ -1,3 +1,7 @@
+2010-06-14  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14723: htmlArea RTE: JS errors block RTE usage in IE6 and IE7 (Thanks to Jo Hasenau)
+
 2010-06-10  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to issue #14662: htmlArea RTE: Should use t3lib_utility_Client::getBrowserInfo
